# inference-server-cpp

./: CMakeLists.txt  README.md
include/: simple_queue.hpp
src/: main.cpp
